add adwin to fraud detection example

--- a/examples/fraud_detection/run.ipynb
+++ b/examples/fraud_detection/run.ipynb
@@ -21,7 +21,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "703f184c-e1a6-4f5e-be14-f959973a1a83",
    "metadata": {},
@@ -45,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "9fcf6586-639e-4b45-8dfd-671f724c766f",
    "metadata": {
     "tags": []
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4bb6b22b-52f4-49df-9745-35dd53dccfbf",
    "metadata": {
     "tags": []
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ff84103b-5354-4d35-b3df-70ba8f58cbd7",
    "metadata": {
     "tags": []
@@ -103,10 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Installing wget to download dataset from remote\n",
-      "Successfully installed wget\n",
-      "Downloading data from the remote server\n",
-      "Data downloaded\n",
+      "Data file exists. Skipping download.\n",
       "NSL_KDD_binary.csv dataset prepared successfully!\n"
      ]
     }
@@ -127,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cee0e008-c9b3-460a-990e-2716ea5483b2",
    "metadata": {
     "tags": []
@@ -359,7 +355,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9cffb270-0cb5-4f84-83ea-e8f195dae0fc",
    "metadata": {
     "tags": []
@@ -416,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "bad7ee0b-7318-4a2f-a681-81bac98547f5",
    "metadata": {
     "tags": []
@@ -457,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "09bf8897-5807-4899-bf48-4dfbdfcca7fb",
    "metadata": {
     "tags": []
@@ -472,21 +468,30 @@
       "\t\tMonitor.CONCEPT_DRIFT\n",
       "\t- algorithm:\n",
       "\t\tDataDriftAlgo.DDM\n",
+      "\t- type:\n",
+      "\t\tMonitor.CONCEPT_DRIFT\n",
+      "\t- algorithm:\n",
+      "\t\tDataDriftAlgo.ADWIN\n",
       "- retraining_folder:\n",
-      "\tuptrain_smart_data\n",
-      "- logging_args:\n",
-      "\t- st_logging:\n",
-      "\t\tTrue\n"
+      "\tuptrain_smart_data\n"
      ]
     }
    ],
    "source": [
+    "checks = [\n",
+    "    {\n",
+    "        \"type\": uptrain.Monitor.CONCEPT_DRIFT,\n",
+    "        \"algorithm\": uptrain.DataDriftAlgo.DDM\n",
+    "    },\n",
+    "    {\n",
+    "        \"type\": uptrain.Monitor.CONCEPT_DRIFT,\n",
+    "        \"algorithm\": uptrain.DataDriftAlgo.ADWIN\n",
+    "    }\n",
+    "]\n",
+    "\n",
     "cfg = {\n",
     "    # Checks to identify concept drift\n",
-    "    \"checks\": [{\n",
-    "        'type': uptrain.Monitor.CONCEPT_DRIFT,\n",
-    "        'algorithm': uptrain.DataDriftAlgo.DDM\n",
-    "    }],\n",
+    "    \"checks\": checks,\n",
     "    \n",
     "    # Folder that stores the drifted data-points identified by UpTrain\n",
     "    \"retraining_folder\": 'uptrain_smart_data',\n",
@@ -494,11 +499,11 @@
     "    # Enable streamlit logging to visualize model's performance\n",
     "    \"logging_args\": {\"st_logging\": True},\n",
     "}\n",
+    "\n",
     "pretty(cfg)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6fc98bbc",
    "metadata": {},
@@ -508,9 +513,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "474b25b9-c0cd-4cfb-bb34-f2e5a0eb5069",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -520,13 +526,8 @@
      "text": [
       "Deleting the folder:  uptrain_smart_data\n",
       "Deleting the folder:  uptrain_logs\n",
-      "\n",
-      "  You can now view your Streamlit app in your browser.\n",
-      "\n",
-      "  Local URL: http://localhost:8501\n",
-      "  Network URL: http://192.168.1.13:8501\n",
-      "\n",
-      "Drift detected with DDM at time: 111296\n"
+      "Drift detected with DDM at time: 111296\n",
+      "Drift detected with ADWIN at time: 111455\n"
      ]
     }
    ],
@@ -621,37 +622,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "1322464e-0917-4f68-aa4c-214a9b6fa7c2",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- checks:\n",
-      "\t- type:\n",
-      "\t\tMonitor.CUSTOM_MONITOR\n",
-      "\t- initialize_func:\n",
-      "\t\t<function custom_initialize_func at 0x7fb9387f8ee0>\n",
-      "\t- check_func:\n",
-      "\t\t<function custom_check_func at 0x7fb9387f8f70>\n",
-      "\t- need_gt:\n",
-      "\t\tTrue\n",
-      "\t- type:\n",
-      "\t\tMonitor.CONCEPT_DRIFT\n",
-      "\t- algorithm:\n",
-      "\t\tDataDriftAlgo.DDM\n",
-      "- retraining_folder:\n",
-      "\tuptrain_smart_data\n",
-      "- logging_args:\n",
-      "\t- st_logging:\n",
-      "\t\tTrue\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Defining a custom drift metric to check if accuracy drops beyond a threshold.\n",
@@ -698,23 +674,59 @@
     "                    alert,\n",
     "                    self.dashboard_name\n",
     "                )\n",
-    "                self.is_drift_detected = True\n",
-    "\n",
+    "                self.is_drift_detected = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "89e24bd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checks.append({\n",
+    "    \"type\": uptrain.Monitor.CUSTOM_MONITOR,\n",
+    "    \"initialize_func\": custom_initialize_func,\n",
+    "    \"check_func\": custom_check_func,\n",
+    "    \"need_gt\": True\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c8dc1388",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- checks:\n",
+      "\t- type:\n",
+      "\t\tMonitor.CONCEPT_DRIFT\n",
+      "\t- algorithm:\n",
+      "\t\tDataDriftAlgo.DDM\n",
+      "\t- type:\n",
+      "\t\tMonitor.CONCEPT_DRIFT\n",
+      "\t- algorithm:\n",
+      "\t\tDataDriftAlgo.ADWIN\n",
+      "\t- type:\n",
+      "\t\tMonitor.CUSTOM_MONITOR\n",
+      "\t- initialize_func:\n",
+      "\t\t<function custom_initialize_func at 0x7fbb33142560>\n",
+      "\t- check_func:\n",
+      "\t\t<function custom_check_func at 0x7fbb331425f0>\n",
+      "\t- need_gt:\n",
+      "\t\tTrue\n",
+      "- retraining_folder:\n",
+      "\tuptrain_smart_data\n"
+     ]
+    }
+   ],
+   "source": [
     "cfg = {\n",
-    "    \"checks\": [\n",
-    "        {\n",
-    "            # Check for our custom monitor\n",
-    "            'type': uptrain.Monitor.CUSTOM_MONITOR,\n",
-    "            'initialize_func': custom_initialize_func,\n",
-    "            'check_func': custom_check_func,\n",
-    "            'need_gt': True,\n",
-    "        },\n",
-    "        {\n",
-    "            # Additionally check for our concept drift from above\n",
-    "            'type': uptrain.Monitor.CONCEPT_DRIFT,\n",
-    "            'algorithm': uptrain.DataDriftAlgo.DDM\n",
-    "        }\n",
-    "    ],\n",
+    "    \"checks\": checks,\n",
     "    \n",
     "    # Folder that stores the drifted data-points identified by UpTrain\n",
     "    \"retraining_folder\": 'uptrain_smart_data',\n",
@@ -722,12 +734,13 @@
     "    # Enable streamlit logging to visualize model's performance\n",
     "    \"logging_args\": {\"st_logging\": True},\n",
     "}\n",
+    "\n",
     "pretty(cfg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "63118254-37a2-4ec0-9a9d-16a4c3e376d1",
    "metadata": {
     "tags": []
@@ -739,13 +752,9 @@
      "text": [
       "Deleting the folder:  uptrain_smart_data\n",
       "Deleting the folder:  uptrain_logs\n",
-      "\n",
-      "  You can now view your Streamlit app in your browser.\n",
-      "\n",
-      "  Local URL: http://localhost:8502\n",
-      "  Network URL: http://10.20.206.136:8502\n",
-      "\n",
-      "Drift detected with DDM at time: 111296\n"
+      "Drift detected with DDM at time: 111296\n",
+      "Drift detected with ADWIN at time: 111455\n",
+      "Concept drift detected with custom metric at time: 111000!!!\n"
      ]
     }
    ],
@@ -830,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
