--- a/examples/coversation_summarization/run.ipynb
+++ b/examples/coversation_summarization/run.ipynb
@@ -25,7 +25,7 @@
    "id": "e43875c5-4d3d-46b1-b93c-f5252bfe9608",
    "metadata": {},
    "source": [
-    "## Run on Google Colab [here](https://colab.research.google.com/drive/1GEYff6lHbSOFbDbPaO5F4FL742TQZhbm?usp=sharing)"
+    "<img style=\"float: left;\" src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Google_Colaboratory_SVG_Logo.svg/1600px-Google_Colaboratory_SVG_Logo.svg.png?20221103151432\" width=\"150\"/> <h1>Run on Google Colab <a href=\"https://colab.research.google.com/drive/1GEYff6lHbSOFbDbPaO5F4FL742TQZhbm?usp=sharing\">here</a>.</h1> "
    ]
   },
   {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "db97a9c7-0440-4d85-a843-354fa39c450f",
    "metadata": {},
    "outputs": [
@@ -168,8 +168,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data downloaded.\n",
-      "Prepared Model Outputs.\n"
+      "Skipping data download as it already exists.\n"
      ]
     }
    ],
@@ -180,10 +179,12 @@
     "    file_downloaded_ok = subprocess.call(\"wget \" + remote_url, shell=True, \n",
     "                                         stdout=subprocess.DEVNULL, stderr=subprocess.STDOUT)\n",
     "    print(\"Data downloaded.\")\n",
-    "with zipfile.ZipFile('conversation_summarization_data.zip', 'r') as zip_ref:\n",
-    "    zip_ref.extractall(\"./\")\n",
-    "print(\"Prepared Model Outputs.\")\n",
-    "os.remove('conversation_summarization_data.zip')"
+    "    with zipfile.ZipFile('conversation_summarization_data.zip', 'r') as zip_ref:\n",
+    "        zip_ref.extractall(\"./\")\n",
+    "    print(\"Prepared Model Outputs.\")\n",
+    "    os.remove('conversation_summarization_data.zip')\n",
+    "else:\n",
+    "    print(\"Skipping data download as it already exists.\")"
    ]
   },
   {
