making rouge-score rogue

--- a/examples/coversation_summarization/run.ipynb
+++ b/examples/coversation_summarization/run.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install uptrain rouge-score datasets umap-learn matplotlib py7zr "
+    "# !pip install uptrain rouge datasets umap-learn matplotlib py7zr "
    ]
   },
   {
