--- a/examples/coversation_summarization/run.ipynb
+++ b/examples/coversation_summarization/run.ipynb
@@ -25,7 +25,7 @@
    "id": "e43875c5-4d3d-46b1-b93c-f5252bfe9608",
    "metadata": {},
    "source": [
-    "<img style=\"float: left;\" src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Google_Colaboratory_SVG_Logo.svg/1600px-Google_Colaboratory_SVG_Logo.svg.png?20221103151432\" width=\"150\"/> <h1>Run on Google Colab <a href=\"https://colab.research.google.com/drive/1GEYff6lHbSOFbDbPaO5F4FL742TQZhbm?usp=sharing\">here</a>.</h1> "
+    "<img style=\"float: left;\" src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Google_Colaboratory_SVG_Logo.svg/1600px-Google_Colaboratory_SVG_Logo.svg.png?20221103151432\" width=\"150\"/> <h1>Run on Google Colab <a href=\"https://colab.research.google.com/drive/1svJoDdbwe-jSeGuQOhtrRMhxwIqP7nMM?usp=sharing\">here</a>.</h1> "
    ]
   },
   {
@@ -41,11 +41,11 @@
     "**Dataset**: Our model has been finetuned on the [SAMSum corpus](https://huggingface.co/datasets/samsum) which has 16k conversations and their summaries. Additionally, we evaluate our model on the [DialogSum corpus](https://huggingface.co/datasets/knkarthick/dialogsum) which has 13k conversations and their summaries. We note that the model has good performance on this new dataset as well, but slightly worse than its performance on the SAMSum dataset. Our objective is to create a finetuning dataset to improve the model on DialogSum like conversations.\n",
     "\n",
     "**Method**: We employ several techniques to collect the fine-tuning dataset: \n",
-    "1) Edge-case Collection (user defines the edge-case parameters) \n",
-    "2) Building Custom Monitor (that checks out-of-vocabulary cases) \n",
-    "3) Finding points where data drift has occured \n",
-    "4) Finding clusters around points where accuracy is low\n",
-    "5) Visualizing UMAP/t-SNE for low-performing clusters"
+    "\n",
+    "1) Visualizing UMAP/t-SNE for low-performing clusters\n",
+    "2) Finding clusters around data-points where accuracy is low\n",
+    "3) Edge-case Collection (user defines the edge-case parameters based on heuristics/observations)\n",
+    "4) Building Custom Monitor (that checks out-of-vocabulary cases) "
    ]
   },
   {
