Changes to READme

--- a/examples/coversation_summarization/run.ipynb
+++ b/examples/coversation_summarization/run.ipynb
@@ -155,7 +155,7 @@
    "metadata": {},
    "source": [
     "#### Download model outputs and their embeddings from remote\n",
-    "We understand that running the bart-large-xsum can be time consuming on sum machines, hence, we have pre-generated the model outputs and their corresponding sentence BERT embeddings to remote for both the SAMSum and DialogSUM datasets. Due to this, running this entire script does not take too much time (e.g., it runs in 3 minutes on my Macbook Air)."
+    "We understand that running the bart-large-xsum can be time consuming on some machines, hence, we have pre-generated the model outputs and their corresponding sentence BERT embeddings to remote for both the SAMSum and DialogSUM datasets. Due to this, running this entire script does not take too much time (e.g., it runs in 3 minutes on my Macbook Air)."
    ]
   },
   {
@@ -667,7 +667,7 @@
    "id": "41330a33-1e88-434a-847e-afc87ea0e7fd",
    "metadata": {},
    "source": [
-    "While analyzing the model outputs above, we made a few observations on cases where model does not perform well. Note that these are not statistical ways but more based on our intuition on dealing with the above data. \n",
+    "While analyzing the model outputs above, we made a few observations on cases where model does not perform well. Note that these are not statistical ways of finding edge cases but are more inspired by our intuition on dealing with the above data.\n",
     "\n",
     "**Observation**: Model performs badly for long dialogs. For example, it generates the following (incomplete) summaries for long dialogs:\n",
     "\n",
