--- a/docs/measurables/predefined.mdx
+++ b/docs/measurables/predefined.mdx
@@ -1,9 +1,9 @@
 ---
 title: Predefined
-description: Pre-defined measurables available in UpTrain and how to use them
+description: Predefined measurables available in UpTrain and how to use them
 ---
 
-UpTrain provides a set of pre-defined measurables that can be used to track your model's performance. The following pre-defined measurables are currently available:
+UpTrain provides a set of predefined measurables that can be used to track your model's performance. The following predefined measurables are currently available:
 
 - **Accuracy:** Measures how often a model's predictions are correct.
 - **Condition:** Allows you to set a boolean comparison condition for the model's prediction.
@@ -12,11 +12,11 @@ UpTrain provides a set of pre-defined measurables that can be used to track your
 - **Recommendation Hit Rate:** Measures the hit rate of a model's recommendation.
 - **Scalar from Embedding:** Extracts a scalar value from each embedding.
 
-## How to use the pre-defined measurables
+## How to use the predefined measurables
 
-We will explain how to use pre-defined measurables using snippets from our [Ride time estimation example](https://github.com/uptrain-ai/uptrain/blob/220d0c3df8316948b6e958323eb1f2efd31aff0a/examples/ride_time_estimation/run.ipynb).
+We will explain how to use predefined measurables using snippets from our [Ride time estimation example](https://github.com/uptrain-ai/uptrain/blob/220d0c3df8316948b6e958323eb1f2efd31aff0a/examples/ride_time_estimation/run.ipynb).
 
-First, we need to create monitors using our pre-defined measurables. For example, to monitor the Mean Absolute Error (MAE) of our model, we can create a monitor object as follows:
+First, we need to create monitors using our predefined measurables. For example, to monitor the Mean Absolute Error (MAE) of our model, we can create a monitor object as follows:
 
 ```python
 # To monitor MAE
