--- a/docs/monitors/data-integrity.mdx
+++ b/docs/monitors/data-integrity.mdx
@@ -3,7 +3,7 @@ title: Data Integrity
 description: Define checks for data integrity in UpTrain
 ---
 
-Data integrity is a crucial aspect of any machine learning model. UpTrain provides several pre-defined monitors to help ensure the data integrity of your model. Data integrity checks can help ensure that the data used by the model is correct, complete, and of good quality. This is especially important in scenarios where data quality issues could have severe consequences, such as in medical or financial applications.
+Data integrity is a crucial aspect of any machine learning model. UpTrain provides several predefined monitors to help ensure the data integrity of your model. Data integrity checks can help ensure that the data used by the model is correct, complete, and of good quality. This is especially important in scenarios where data quality issues could have severe consequences, such as in medical or financial applications.
 
 The Data Integrity Monitor in UpTrain checks for issues such as missing or corrupted data, incorrect data types, and outliers. It takes as input the dataset used by the model and performs checks to identify potential issues. Following is an example of a data integrity check taken from the [human orientation classification](https://github.com/uptrain-ai/uptrain/blob/main/examples/human_orientation_classification/run.ipynb) example:
 
