--- a/docs/visuals/umap.mdx
+++ b/docs/visuals/umap.mdx
@@ -3,7 +3,7 @@ title: UMAP Visualization
 description: UMAP Dimensionality Reduction for Data Visualization
 ---
 
-Visuals are pre-defined classes in the UpTrain framework that helps visualize your data and get deep insights about your machine learning models. Currently, UpTrain supports UMAP and t-SNE dimensionality reduction techniques and their corresponding visualizations in the UpTrain dashboard. Further, users can add their custom visualizations to see on the UpTrain dashboard. Next, we describe UMAP and t-SNE in more detail.
+Visuals are predefined classes in the UpTrain framework that helps visualize your data and get deep insights about your machine learning models. Currently, UpTrain supports UMAP and t-SNE dimensionality reduction techniques and their corresponding visualizations in the UpTrain dashboard. Further, users can add their custom visualizations to see on the UpTrain dashboard. Next, we describe UMAP and t-SNE in more detail.
 
 UMAP (Uniform Manifold Approximation and Projection) is a dimensionality reduction technique that has been shown to be highly effective for visualizing high-dimensional data, including embeddings learned by machine learning models. The UpTrain integrates with the python UMAP package to include a UMAP dimensionality reduction that enables users to visualize the embeddings of their models and gain insights into the structure and relationships within the data.
 
