--- a/docs/measurables/custom.mdx
+++ b/docs/measurables/custom.mdx
@@ -44,7 +44,7 @@ check2 = {
 }
 ```
 
-In the same way as shown in the predefined example, we will add our check to the `checks` list in the config dictionary and initialize the `Framework` class. The class will then use the provided checks to monitor the 'body_length_signal' of our model.
+- We add our check to the `checks` list in the config dictionary and initialize the `Framework` class. The class will then use the provided checks to monitor the 'body_length_signal' of our model.
 
 ```python
 checks = [check1, check2, check3]
