update ride time estimation example to mention no concept drift detection

--- a/examples/ride_time_estimation/run.ipynb
+++ b/examples/ride_time_estimation/run.ipynb
@@ -621,6 +621,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a94d508d",
+   "metadata": {},
+   "source": [
+    "### Concept Drift\n",
+    "\n",
+    "There is no concept drift detected in this example."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "00dfb3a3-e9db-4463-9447-2e33af7fe3f1",
    "metadata": {},
