Replace local image with s3 link

--- a/docs/visuals/tsne.mdx
+++ b/docs/visuals/tsne.mdx
@@ -32,7 +32,7 @@ Here, the parameters related to the dataset's features on which dimensionality r
 Continuing our example reference from [UMAP](/visuals/umap), the following is how the t-SNE visualization looks like for the [text summarization](https://github.com/uptrain-ai/uptrain/blob/main/examples/text_summarization/run.ipynb) example.
 
 <Frame caption="t-SNE visualization for the BERT embeddings of the billsum and wikihow datasets for the text summarization task">
-  <img width="500" src="/images/tsne.png"/>
+  <img width="500" src="https://uptrain-demo.s3.us-west-1.amazonaws.com/text_summarization/t-SNE.png"/>
 </Frame>
 
 Similar to UMAP, we see that the embeddings corresponding to the wikihow dataset have a different distribution than the billsum training and testing dataset.
