--- a/examples/ride_time_estimation/run.ipynb
+++ b/examples/ride_time_estimation/run.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "836d574d-eef9-4a0b-b238-81b16dc592fe",
    "metadata": {},
    "outputs": [],
@@ -174,66 +174,66 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1288953</th>\n",
+       "      <th>148658</th>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.006078</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15</td>\n",
-       "      <td>4</td>\n",
-       "      <td>16</td>\n",
-       "      <td>15</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1435924</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.007862</td>\n",
+       "      <td>0.017124</td>\n",
        "      <td>2016</td>\n",
        "      <td>3</td>\n",
-       "      <td>12</td>\n",
-       "      <td>5</td>\n",
-       "      <td>18</td>\n",
-       "      <td>15</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>420758</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.021319</td>\n",
-       "      <td>2016</td>\n",
        "      <td>3</td>\n",
-       "      <td>31</td>\n",
        "      <td>3</td>\n",
        "      <td>15</td>\n",
-       "      <td>21</td>\n",
+       "      <td>45</td>\n",
        "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13628</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.062389</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>3</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>38</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>537560</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.021329</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>46</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         vendor_id  passenger_count  store_and_fwd_flag      dist  \\\n",
-       "1288953          2                1                   0  0.006078   \n",
-       "1435924          1                3                   0  0.007862   \n",
-       "420758           1                1                   0  0.021319   \n",
+       "        vendor_id  passenger_count  store_and_fwd_flag      dist  pickup_year  \\\n",
+       "148658          2                1                   0  0.017124         2016   \n",
+       "13628           1                2                   0  0.062389         2016   \n",
+       "537560          2                1                   0  0.021329         2016   \n",
        "\n",
-       "         pickup_year  pickup_month  pickup_day  pickup_dow  pickup_hour  \\\n",
-       "1288953         2016             1          15           4           16   \n",
-       "1435924         2016             3          12           5           18   \n",
-       "420758          2016             3          31           3           15   \n",
+       "        pickup_month  pickup_day  pickup_dow  pickup_hour  pickup_min  \\\n",
+       "148658             3           3           3           15          45   \n",
+       "13628              3          26           5           13          38   \n",
+       "537560             1          19           1           14          14   \n",
        "\n",
-       "         pickup_min  pickup_sec  \n",
-       "1288953          15          26  \n",
-       "1435924          15          13  \n",
-       "420758           21          14  "
+       "        pickup_sec  \n",
+       "148658          14  \n",
+       "13628           10  \n",
+       "537560          46  "
       ]
      },
      "execution_count": 5,
@@ -301,8 +301,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Mean Percentage Error: 419.58 seconds\n",
-      "Training Mean Absolute Percentage Error: 74.59 %\n"
+      "Training Mean Percentage Error: 425.82 seconds\n",
+      "Training Mean Absolute Percentage Error: 73.26 %\n"
      ]
     }
    ],
@@ -350,16 +350,50 @@
     "mae_monitor = {       \n",
     "    \"type\": uptrain.Monitor.ACCURACY,\n",
     "    \"measurable_args\": {\n",
-    "        'type': uptrain.MeasurableType.MAE,\n",
+    "        \"type\": uptrain.MeasurableType.MAE,\n",
     "    },\n",
     "}\n",
     "\n",
-    "# To monitor  (MAPE)\n",
+    "# To monitor (MAPE)\n",
     "mape_monitor = {\n",
     "    \"type\": uptrain.Monitor.ACCURACY,\n",
     "    \"measurable_args\": {\n",
     "        'type': uptrain.MeasurableType.MAPE,\n",
     "    },\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b66592de",
+   "metadata": {},
+   "source": [
+    "**Concept Drift monitor**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "12bc7c2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "concept_drift_monitor_mae = {\n",
+    "    \"type\": uptrain.Monitor.CONCEPT_DRIFT,\n",
+    "    \"algorithm\": uptrain.DataDriftAlgo.ADWIN,\n",
+    "    \"measurable_args\": {\n",
+    "        \"type\": uptrain.MeasurableType.MAE\n",
+    "    },\n",
+    "    \"delta\": 0.01\n",
+    "}\n",
+    "\n",
+    "concept_drift_monitor_mape = {\n",
+    "    \"type\": uptrain.Monitor.CONCEPT_DRIFT,\n",
+    "    \"algorithm\": uptrain.DataDriftAlgo.ADWIN,\n",
+    "    \"measurable_args\": {\n",
+    "        \"type\": uptrain.MeasurableType.MAPE\n",
+    "    },\n",
+    "    \"delta\": 0.1\n",
     "}"
    ]
   },
@@ -374,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "5d0a5ba0-d686-495a-83e0-d4fd1583bd57",
    "metadata": {},
    "outputs": [],
@@ -401,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "91dd83d3-5777-4c03-8dcb-36224eba8286",
    "metadata": {},
    "outputs": [],
@@ -428,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "0ef9998f-97c9-4cf9-8349-916a6543c091",
    "metadata": {},
    "outputs": [
@@ -449,6 +483,24 @@
       "\t- measurable_args:\n",
       "\t\t- type:\n",
       "\t\t\tMeasurableType.MAPE\n",
+      "\t- type:\n",
+      "\t\tMonitor.CONCEPT_DRIFT\n",
+      "\t- algorithm:\n",
+      "\t\tDataDriftAlgo.ADWIN\n",
+      "\t- measurable_args:\n",
+      "\t\t- type:\n",
+      "\t\t\tMeasurableType.MAE\n",
+      "\t- delta:\n",
+      "\t\t0.01\n",
+      "\t- type:\n",
+      "\t\tMonitor.CONCEPT_DRIFT\n",
+      "\t- algorithm:\n",
+      "\t\tDataDriftAlgo.ADWIN\n",
+      "\t- measurable_args:\n",
+      "\t\t- type:\n",
+      "\t\t\tMeasurableType.MAPE\n",
+      "\t- delta:\n",
+      "\t\t0.1\n",
       "\t- type:\n",
       "\t\tMonitor.DATA_INTEGRITY\n",
       "\t- measurable_args:\n",
@@ -476,7 +528,7 @@
    ],
    "source": [
     "cfg = {\n",
-    "    \"checks\": [mae_monitor, mape_monitor, data_integrity_monitor, shap_visual],\n",
+    "    \"checks\": [mae_monitor, mape_monitor, concept_drift_monitor_mae, concept_drift_monitor_mape, data_integrity_monitor, shap_visual],\n",
     "    \"logging_args\": {\"st_logging\": True},\n",
     "}\n",
     "framework = uptrain.Framework(cfg_dict=cfg)\n",
@@ -493,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "1ff86aef-d3bc-4474-a7c6-5e9dbe80cdd6",
    "metadata": {},
    "outputs": [],
@@ -569,6 +621,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a94d508d",
+   "metadata": {},
+   "source": [
+    "### Concept Drift\n",
+    "\n",
+    "There is no concept drift detected in this example."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "00dfb3a3-e9db-4463-9447-2e33af7fe3f1",
    "metadata": {},
@@ -597,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
