--- a/examples/automated_finetuning/bert_finetuning_ww.ipynb
+++ b/examples/automated_finetuning/bert_finetuning_ww.ipynb
@@ -289,26 +289,27 @@
    "outputs": [],
    "source": [
     "class BertForSequenceClassificationWithIntermediateLayer(BertPreTrainedModel):\n",
-    "    '''\n",
-    "    Extends the BertForSequenceClassification class to return the logits of the intermediate layer.\n",
-    "    '''\n",
-    "    def __init__(self, config):\n",
-    "        super().__init__(config)\n",
-    "        self.num_labels = config.num_labels\n",
-    "        self.config = config\n",
+    "  '''\n",
+    "  Extends the BertForSequenceClassification class to return the logits of the intermediate layer.\n",
+    "  '''\n",
+    "  def __init__(self, config):\n",
+    "    super().__init__(config)\n",
+    "    # import pdb; pdb.set_trace()\n",
+    "    self.num_labels = config.num_labels\n",
+    "    self.config = config\n",
     "\n",
-    "        self.bert = BertModel(config)\n",
-    "        classifier_dropout = (\n",
-    "            config.classifier_dropout if config.classifier_dropout is not None else config.hidden_dropout_prob\n",
-    "        )\n",
-    "        self.dropout = nn.Dropout(classifier_dropout)\n",
-    "        self.post_bert = nn.Linear(config.hidden_size, config.hidden_size)\n",
-    "        self.classifier = nn.Linear(config.hidden_size, config.num_labels)\n",
+    "    self.bert = BertModel(config)\n",
+    "    classifier_dropout = (\n",
+    "        config.classifier_dropout if config.classifier_dropout is not None else config.hidden_dropout_prob\n",
+    "    )\n",
+    "    self.dropout = nn.Dropout(classifier_dropout)\n",
+    "    self.post_bert = nn.Linear(config.hidden_size, config.hidden_size)\n",
+    "    self.classifier = nn.Linear(config.hidden_size, config.num_labels)\n",
+    "    self.relu = nn.ReLU()\n",
+    "    # Initialize weights and apply final processing\n",
+    "    self.post_init()\n",
     "\n",
-    "        # Initialize weights and apply final processing\n",
-    "        self.post_init()\n",
-    "\n",
-    "    def forward(\n",
+    "  def forward(\n",
     "        self,\n",
     "        input_ids: Optional[torch.Tensor] = None,\n",
     "        attention_mask: Optional[torch.Tensor] = None,\n",
@@ -345,8 +346,9 @@
     "\n",
     "        pooled_output = self.dropout(pooled_output)\n",
     "        intermediate_output = self.post_bert(pooled_output)\n",
-    "        pooled_output = self.dropout(intermediate_output)\n",
-    "        logits = self.classifier(pooled_output)\n",
+    "        intermediate_output = self.relu(intermediate_output)\n",
+    "        intermediate_output = self.dropout(intermediate_output)\n",
+    "        logits = self.classifier(intermediate_output)\n",
     "\n",
     "        loss = None\n",
     "        if labels is not None:\n",
@@ -417,6 +419,9 @@
     "                          lr = 5e-5,\n",
     "                          eps = 1e-08\n",
     "                          )\n",
+    "optimizer_type = 'AdamW'\n",
+    "optimizer_base_lr = 2e-5\n",
+    "\n",
     "val_ratio = 0.2\n",
     "labels = df.label.values\n",
     "train_idx, val_idx = train_test_split(\n",
@@ -466,10 +471,14 @@
     "    {'type': uptrain.Statistic.FINETUNE,\n",
     "    'optimizer': optimizer,\n",
     "    'dataloader': train_dataloader,\n",
-    "    'layers': [219],}\n",
+    "    'layers': [230],\n",
+    "    'customLR': True,\n",
+    "    'base_lr': 2e-5,\n",
+    "    }\n",
     "    ],\n",
     "    \"logging_args\": {\"st_logging\": True,\n",
-    "                    \"log_data\": False},\n",
+    "                    \"log_data\": False,\n",
+    "                    },\n",
     "}"
    ]
   },
@@ -587,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
